Non-unified build fixes, late-ish October 2020 edition https://bugs.webkit.org/show_bug.cgi?id=218095

Unreviewed non-unified build fix.

No new tests needed.


* Modules/speech/SpeechRecognitionResultList.h: Include SpeechRecognitionResult.h
instead of using a forward declaration.
* layout/integration/LayoutIntegrationLineLayout.cpp: Add missing RenderImage.h header.
* page/scrolling/ScrollingTreeLatchingController.h: Add missing wtf/OptionSet.h header
and forward-declare WheelEventProcessingSteps.
* workers/WorkerOrWorkletGlobalScope.cpp: Add missing WorkerOrWorkletThread.h and
WorkerRunLoop.h headers.


Canonical link: https://commits.webkit.org/230814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268895 268f45cc-cd09-0410-ab3c-d52691b4dbfc